k8s/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: predictive-api
  namespace: predictive-maintenance

spec:
  replicas: 2

  selector:
    matchLabels:
      app: predictive-api

  template:
    metadata:
      labels:
        app: predictive-api

    spec:
      containers:
      - name: predictive-api

        image: predictive-backend:v2
        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
