k8s/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: predictive-frontend
  namespace: predictive-maintenance

spec:
  replicas: 2

  selector:
    matchLabels:
      app: predictive-frontend

  template:
    metadata:
      labels:
        app: predictive-frontend

    spec:
      containers:
        - name: frontend

          image: predictive-frontend:test
          imagePullPolicy: Never

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "300m"
              memory: "256Mi"
