k8s/05-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: predictive-backend-service
  namespace: predictive-maintenance

spec:
  type: ClusterIP

  selector:
    app: predictive-api

  ports:
    - port: 8000
      targetPort: 8000
