k8s/07-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: predictive-frontend-service
  namespace: predictive-maintenance

spec:
  selector:
    app: predictive-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
