k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: predictive-api-service
  namespace: predictive-maintenance

spec:
  type: NodePort

  selector:
    app: predictive-api

  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
