k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: predictive-ingress
  namespace: predictive-maintenance

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: predictive.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: predictive-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: predictive-backend-service
                port:
                  number: 8000
